app/assets/stylesheets/intel/modules/_tabs.scss
/* tabs */

.tabs-a {
    margin-bottom: 30px;

    + .box-a {
        margin-top: -36px;
    }

    ul {
        list-style: none;
        margin: 0;
        padding: 0;
    }

    li {
        display: inline-block;
        font-size: 18px;
        line-height: 54px;
        vertical-align: top;

        a {
          display: block;
          padding: 0 25px 6px;
        }

        small {
          font: inherit;
        }


        &:before {
          display: none;
        }

        &.is-active,
        &.active {
          font-weight: bold;

          a {

            background: #fff;
          }
        }
    }

    select {
        display: none;
    }

    @include bp($screen-tablet-vertical) {

        + .box-a {
            margin-top: 0;
        }

        ul {
            display: none;
        }

        select {
            display: block;
        }
    }
}
.tab-content {
  > .tab-pane {
    display: none;
  }

  > .active {
    display: block;
  }
}

